# shortdiary-api

./: .flake8  .gitignore  Dockerfile  config.example.yml  pyproject.toml
.github/workflows/: docker.yml
src/: config.py  main.py  models.py
src/migrations/models/: 0_20220719213255_init.sql  1_20220719213401_add_subscription.sql  2_20220720012114_update_subscription.sql  3_20220720013849_update_subscription.sql
src/routers/: auth.py  billing.py  posts.py
